--- a/index.html
+++ b/index.html
@@ -1,202 +1,32 @@
 <!DOCTYPE html>
-<html lang="uk-UA">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Уцінка</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Інтернет-магазин "Unique Goods"</title>
     <link rel="stylesheet" href="CSS/styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Concert+One&family=Satisfy&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <header>
-      <div class="header_name">Unique prices for unique products</div>
+      <div class="logo">
+        <img src="IMG/LOGO/logo-no-background.png" alt="logo" />
+      </div>
+      <div class="header_list">
+        <ul class="top-list">
+          <li><a class="top-link" href="#">Про магазин</a></li>
+          <li><a class="top-link" href="#">Акції</a></li>
+          <li><a class="top-link" href="#">Оплата</a></li>
+          <li><a class="top-link" href="#">Доставка</a></li>
+          <li><a class="top-link" href="#">Гарантії і сервіс</a></li>
+          <li><a class="top-link" href="#">Контакти</a></li>
+        </ul>
+      </div>
     </header>
-    <div class="product_list">
-      <div class="products">
-        <script src="JS/script.js"></script>
-        <div class="product-wrap">
-          <div class="product-image">
-            <a href=""><img src="img/d0.jpg" /></a>
-            <div class="shadow"></div>
-            <div class="actions">
-              <div class="actions-btn">
-                <div class="add-to-cart">
-                  <div class="quikview">
-                    <a
-                      class="quikview-button"
-                      href="about.html"
-                      title="Детальна інформація"
-                      ><img
-                        class="icon_search"
-                        src="img/loupe_428094.png"
-                        alt="Більш детально про товар"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product-list">
-            <h3>Мінімийка Karcher K5 POWER CONTROL</h3>
-            <div class="price">&#8372; 13500</div>
-            <p class="article">
-              <span class="name_article">Артикул:</span>20304708
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="products">
-        <script src="JS/script.js"></script>
-        <div class="product-wrap">
-          <div class="product-image">
-            <a href=""
-              ><img src="img/Мінімийка Karcher K2 Universal Edition.jpg"
-            /></a>
-            <div class="shadow"></div>
-            <div class="actions">
-              <div class="actions-btn">
-                <div class="add-to-cart">
-                  <div class="quikview">
-                    <a
-                      class="quikview-button"
-                      href="k2.html"
-                      title="Детальна інформація"
-                      ><img
-                        class="icon_search"
-                        src="img/loupe_428094.png"
-                        alt="Більш детально про товар"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product-list">
-            <h3>Мінімийка Karcher K2 Universal Edition</h3>
-            <div class="price">&#8372; 3300</div>
-            <p class="article">
-              <span class="name_article">Артикул:</span>20304587
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="products">
-        <script src="JS/script.js"></script>
-        <div class="product-wrap">
-          <div class="product-image">
-            <a href=""
-              ><img src="img/Мінімийка Karcher K4 Power Control Car.jpg"
-            /></a>
-            <div class="shadow"></div>
-            <div class="actions">
-              <div class="actions-btn">
-                <div class="add-to-cart">
-                  <div class="quikview">
-                    <a
-                      class="quikview-button"
-                      href="Einhell.html"
-                      title="Детальна інформація"
-                      ><img
-                        class="icon_search"
-                        src="img/loupe_428094.png"
-                        alt="Більш детально про товар"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product-list">
-            <h3>Мінімийка Karcher K4 Power Control Car</h3>
-            <div class="price">&#8372; 10500</div>
-            <p class="article">
-              <span class="name_article">Артикул:</span>20304712
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="products">
-        <script src="JS/script.js"></script>
-        <div class="product-wrap">
-          <div class="product-image">
-            <a href=""
-              ><img src="img/Верстат циркулярний Einhell TC-TS.jpg"
-            /></a>
-            <div class="shadow"></div>
-            <div class="actions">
-              <div class="actions-btn">
-                <div class="add-to-cart">
-                  <div class="quikview">
-                    <a
-                      class="quikview-button"
-                      href="K4 Power Control Car.html"
-                      title="Детальна інформація"
-                      ><img
-                        class="icon_search"
-                        src="img/loupe_428094.png"
-                        alt="Більш детально про товар"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product-list">
-            <h3>Верстат циркулярний Einhell TC-TS 2025/2 U</h3>
-            <div class="price">&#8372; 10500</div>
-            <p class="article">
-              <span class="name_article">Артикул:</span>20305375
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="products">
-        <script src="JS/script.js"></script>
-        <div class="product-wrap">
-          <div class="product-image">
-            <a href=""
-              ><img
-                src="img/Рейсмусовий верстат FDB Maschinen MB13 827697.webp"
-            /></a>
-            <div class="shadow"></div>
-            <div class="actions">
-              <div class="actions-btn">
-                <div class="add-to-cart">
-                  <div class="quikview">
-                    <a
-                      class="quikview-button"
-                      href="FDB Maschinen MB13.html"
-                      title="Детальна інформація"
-                      ><img
-                        class="icon_search"
-                        src="img/loupe_428094.png"
-                        alt="Більш детально про товар"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product-list">
-            <h3>Рейсмусовий верстат FDB Maschinen MB13</h3>
-            <div class="price">&#8372; 18000</div>
-            <p class="article">
-              <span class="name_article">Артикул:</span>20309552
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
   </body>
 </html>
