--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header>
@@ -28,5 +32,91 @@
         </ul>
       </div>
     </header>
+    <div class="container_list">
+      <div class="container_tovara">
+        <div class="product_foto_container">
+          <div class="product_foto">
+            <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
+          </div>
+        </div>
+        <div class="main_container">
+          <div class="nazva">
+            <a href="#"
+              ><p class="nazva_tovaru">
+                Мінімийка Karcher К5 Full Control Plus
+              </p></a
+            >
+          </div>
+          <div class="cina_vkorzinu">
+            <div class="cina">
+              <p class="cinatext">3333 <span>₴</span></p>
+            </div>
+            <div class="vkorzinu">
+              <button class="btn"><i class="fa fa-shopping-cart"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container_tovara">
+        <div class="product_foto_container">
+          <div class="product_foto">
+            <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
+          </div>
+        </div>
+        <div class="main_container">
+          <div class="nazva">
+            <a href="#"><p class="nazva_tovaru">Назва товару</p></a>
+          </div>
+          <div class="cina_vkorzinu">
+            <div class="cina">
+              <p class="cinatext">3333 <span>₴</span></p>
+            </div>
+            <div class="vkorzinu">
+              <button class="btn"><i class="fa fa-shopping-cart"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container_tovara">
+        <div class="product_foto_container">
+          <div class="product_foto">
+            <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
+          </div>
+        </div>
+        <div class="main_container">
+          <div class="nazva">
+            <a href="#"><p class="nazva_tovaru">Назва товару</p></a>
+          </div>
+          <div class="cina_vkorzinu">
+            <div class="cina">
+              <p class="cinatext">3333 <span>₴</span></p>
+            </div>
+            <div class="vkorzinu">
+              <button class="btn"><i class="fa fa-shopping-cart"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container_tovara">
+        <div class="product_foto_container">
+          <div class="product_foto">
+            <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
+          </div>
+        </div>
+        <div class="main_container">
+          <div class="nazva">
+            <a href="#"><p class="nazva_tovaru">Всяка дічь</p></a>
+          </div>
+          <div class="cina_vkorzinu">
+            <div class="cina">
+              <p class="cinatext">666 <span>₴</span></p>
+            </div>
+            <div class="vkorzinu">
+              <button class="btn"><i class="fa fa-shopping-cart"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
