--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   </head>
   <body>
     <header>
@@ -32,91 +33,127 @@
         </ul>
       </div>
     </header>
-    <div class="container_list">
-      <div class="container_tovara">
-        <div class="product_foto_container">
-          <div class="product_foto">
-            <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
-          </div>
-        </div>
-        <div class="main_container">
-          <div class="nazva">
-            <a href="#"
-              ><p class="nazva_tovaru">
-                Мінімийка Karcher К5 Full Control Plus
-              </p></a
-            >
-          </div>
-          <div class="cina_vkorzinu">
-            <div class="cina">
-              <p class="cinatext">3333 <span>₴</span></p>
-            </div>
-            <div class="vkorzinu">
-              <button class="btn"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container_tovara">
-        <div class="product_foto_container">
-          <div class="product_foto">
-            <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
-          </div>
-        </div>
-        <div class="main_container">
-          <div class="nazva">
-            <a href="#"><p class="nazva_tovaru">Назва товару</p></a>
-          </div>
-          <div class="cina_vkorzinu">
-            <div class="cina">
-              <p class="cinatext">3333 <span>₴</span></p>
-            </div>
-            <div class="vkorzinu">
-              <button class="btn"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container_tovara">
-        <div class="product_foto_container">
-          <div class="product_foto">
-            <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
-          </div>
-        </div>
-        <div class="main_container">
-          <div class="nazva">
-            <a href="#"><p class="nazva_tovaru">Назва товару</p></a>
-          </div>
-          <div class="cina_vkorzinu">
-            <div class="cina">
-              <p class="cinatext">3333 <span>₴</span></p>
-            </div>
-            <div class="vkorzinu">
-              <button class="btn"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container_tovara">
-        <div class="product_foto_container">
-          <div class="product_foto">
-            <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
-          </div>
-        </div>
-        <div class="main_container">
-          <div class="nazva">
-            <a href="#"><p class="nazva_tovaru">Всяка дічь</p></a>
-          </div>
-          <div class="cina_vkorzinu">
-            <div class="cina">
-              <p class="cinatext">666 <span>₴</span></p>
-            </div>
-            <div class="vkorzinu">
-              <button class="btn"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
+    <div class="sub-menu">
+    <div class="dropdown">
+      <button class="dropbtn">Каталог товарів</button>
+      <div class="dropdown-content">
+      <a href="#">Автотовари</a>
+      <a href="#">МСО</a>
+      <a href="#">Витратні матеріали</a>
+      <a href="#">Електроінструменти</a>
+      <a href="#">Ручний інструмент</a>
+      <a href="#">Засоби захисту</a>
       </div>
     </div>
+    <form class="search-form" action="https://www.google.com/">
+      <input class="search-str" type="text" placeholder="Я шукаю...">
+      <button class="search-btn" type="submit"></button>
+    </form>
+    <div class="like-cont">
+      <button><a href="#"><span class="material-symbols-outlined">
+        favorite
+        </span>Список побажань</a></button>
+    </div>
+    <div class="like-cont">
+      <button><a href="#"><span class="material-symbols-outlined">
+        sync_alt
+        </span>Список порівняння</a></button>
+    </div>
+    <div class="like-cont">
+      <button><a href="#"><span class="material-symbols-outlined">
+        shopping_cart_checkout
+        </span>Ваш кошик</a></button>
+    </div>
+
+    </div>
+    <div class="container_list">
+        <div class="container_tovara">
+          <div class="product_foto_container">
+            <div class="product_foto">
+              <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
+            </div>
+          </div>
+          <div class="main_container">
+            <div class="nazva">
+              <a href="#"
+                ><p class="nazva_tovaru">
+                  Мінімийка Karcher К5 Full Control Plus
+                </p></a
+              >
+            </div>
+            <div class="cina_vkorzinu">
+              <div class="cina">
+                <p class="cinatext">3333 <span>₴</span></p>
+              </div>
+              <div class="vkorzinu">
+                <button class="btn"><i class="fa fa-shopping-cart"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container_tovara">
+          <div class="product_foto_container">
+            <div class="product_foto">
+              <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
+            </div>
+          </div>
+          <div class="main_container">
+            <div class="nazva">
+              <a href="#"><p class="nazva_tovaru">Назва товару</p></a>
+            </div>
+            <div class="cina_vkorzinu">
+              <div class="cina">
+                <p class="cinatext">3333 <span>₴</span></p>
+              </div>
+              <div class="vkorzinu">
+                <button class="btn"><i class="fa fa-shopping-cart"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container_tovara">
+          <div class="product_foto_container">
+            <div class="product_foto">
+              <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
+            </div>
+          </div>
+          <div class="main_container">
+            <div class="nazva">
+              <a href="#"><p class="nazva_tovaru">Назва товару</p></a>
+            </div>
+            <div class="cina_vkorzinu">
+              <div class="cina">
+                <p class="cinatext">3333 <span>₴</span></p>
+              </div>
+              <div class="vkorzinu">
+                <button class="btn"><i class="fa fa-shopping-cart"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container_tovara">
+          <div class="product_foto_container">
+            <div class="product_foto">
+              <a href="#"><img src="IMG/d0.jpg" alt="" class="img_p" /></a>
+            </div>
+          </div>
+          <div class="main_container">
+            <div class="nazva">
+              <a href="#"><p class="nazva_tovaru">Всяка дічь</p></a>
+            </div>
+            <div class="cina_vkorzinu">
+              <div class="cina">
+                <p class="cinatext">666 <span>₴</span></p>
+              </div>
+              <div class="vkorzinu">
+                <button class="btn"><i class="fa fa-shopping-cart"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+  
+
+
   </body>
 </html>
