--- a/index.html
+++ b/index.html
@@ -154,6 +154,62 @@
     </div>
   
 
-
+    <footer>
+      <div class="footer_container">
+        <div class="grafik">
+          <p class="grafik_title">Графік роботи:</p>
+          <div class="grf">
+            <span class="bold_text">Пн - Пт :</span>
+            <p>09:00 - 18:00</p>
+          </div>
+          <div class="grf">
+            <span class="bold_text">Сб :</span>
+            <p>10:00 - 15:00</p>
+          </div>
+          <div class="grf">
+            <span class="bold_text">Нд :</span>
+            <p>вихідний</p>
+          </div>
+        </div>
+        <div class="contacts">
+          <div class="contacts_text">
+            <p class="cont-title">Контакти</p>
+            <div class="contn">
+              <div class="icon_ctnt">
+                <img src="IMG/phone-handset_icon-icons.com_48252.png" alt="" />
+                <span class="tak">+380 66 015 11 79</span>
+              </div>
+              <div class="txt_ctnt">
+                <img
+                  src="IMG/opened-email-envelope_icon-icons.com_70656.png"
+                  alt=""
+                />
+                <span class="tak">soleynik20@gmail.com</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="social">
+          <a href="#" class="social_icon"
+            ><img src="IMG/facebook_1384005.png" alt=""
+          /></a>
+          <a href="#" class="social_icon"
+            ><img src="IMG/instagram_733614.png" alt=""
+          /></a>
+          <a href="#" class="social_icon"
+            ><img src="IMG/messenger.png" alt=""
+          /></a>
+          <a href="#" class="social_icon"
+            ><img src="IMG/whatsapp_1384007.png" alt=""
+          /></a>
+          <a href="#" class="social_icon"
+            ><img src="IMG/youtube.png" alt=""
+          /></a>
+          <a href="#" class="social_icon"
+            ><img src="IMG/twitter_1384006.png" alt=""
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
