--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
     </div>
 
     </div>
+    <div class="slider">
+      <div class="container_slider_css">
+        <img class="photo_slider_css" src="IMG/11pray-for-ukraine.jpg" alt=""/>
+        <img class="photo_slider_css" src="IMG/12pray-for-ukraine.jpg" alt=""/>
+        <img class="photo_slider_css" src="IMG/13pray-for-ukraine.jpg" alt=""/>
+        <img class="photo_slider_css" src="IMG/14.png" alt=""/>
+      </div>
+    </div>
+    
     <div class="container_list">
         <div class="container_tovara">
           <div class="product_foto_container">
